<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/title_color">
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="29dip"
            android:layout_height="29dip"
            android:paddingLeft="5dip"
            android:paddingTop="1dip"
            android:paddingBottom="1dip"
            android:layout_gravity="left"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textColor="#FFEA00"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="7dip"
            android:paddingBottom="5dip"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="ＮＡＶＩ履歴編集"
            android:textSize="10sp"
            android:textColor="#F7F7F7"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <!-- 日付タイトル -->
            <TextView
                android:id="@+id/date_title"
                android:textSize="18dip"
                android:text="@string/date_title"
                android:textColor="#A9A9A9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!-- 日付データ -->
            <TextView
                android:id="@+id/date_data"
                android:textSize="16dip"
                android:text="@string/blank"
                android:textColor="#F7F7F7"
                android:layout_marginLeft="30dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <!-- 目的地タイトル -->
            <TextView
                android:id="@+id/dest_title"
                android:textSize="18dip"
                android:text="@string/dest_title"
                android:textColor="#A9A9A9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!-- 目的地データ -->
            <TextView
                android:id="@+id/dest_data"
                android:textSize="16dip"
                android:text="@string/blank"
                android:textColor="#F7F7F7"
                android:layout_marginLeft="30dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <!-- 移動距離タイトル -->
            <TextView
                android:id="@+id/distance_title"
                android:textSize="18dip"
                android:text="@string/distance_title"
                android:textColor="#A9A9A9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!-- 移動距離データ -->
            <TextView
                android:id="@+id/distance_data"
                android:textSize="16dip"
                android:text="@string/blank"
                android:textColor="#F7F7F7"
                android:layout_marginLeft="30dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!-- メモ -->
        <TextView
            android:id="@+id/memo_title"
            android:textSize="20dip"
            android:text="@string/memo_title"
            android:textColor="#A9A9A9"
            android:layout_marginLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/memo_txt"
            android:textColor="#000000"
            android:layout_marginRight="30dip"
            android:layout_marginLeft="30dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="40dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/saveButton"
            android:paddingTop="3.0px"
            android:paddingBottom="3.0px"
            android:layout_marginRight="30dip"
            android:layout_marginLeft="30dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_save"
            android:text="@string/button_label12"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />

    </LinearLayout>

</LinearLayout>