<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/title_color">
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="29dip"
            android:layout_height="29dip"
            android:paddingLeft="5dip"
            android:paddingTop="1dip"
            android:paddingBottom="1dip"
            android:layout_gravity="left"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textColor="#FFEA00"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="7dip"
            android:paddingBottom="5dip"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="現在地と目的地の設定／確認"
            android:textSize="10sp"
            android:textColor="#F7F7F7"/>

    </LinearLayout>

    <WebView
        android:id="@+id/destwebview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:paddingTop="3.0px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keiroButton"
            android:paddingTop="3.0px"
            android:paddingRight="2.0px"
            android:paddingBottom="3.0px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_directions"
            android:text="@string/button_label6"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />

        <Button
            android:id="@+id/naviButton"
            android:paddingTop="3.0px"
            android:paddingLeft="2.0px"
            android:paddingBottom="3.0px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_compass"
            android:text="@string/button_label7"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />

    </LinearLayout>

</LinearLayout>