<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:stretchColumns="1"
	android:shrinkColumns="1"
    android:background="@drawable/background2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/title_color">
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="29dip"
            android:layout_height="29dip"
            android:paddingLeft="5dip"
            android:paddingTop="1dip"
            android:paddingBottom="1dip"
            android:layout_gravity="left"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textColor="#FFEA00"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="7dip"
            android:paddingBottom="5dip"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="目的地入力"
            android:textSize="10sp"
            android:textColor="#F7F7F7"/>

    </LinearLayout>

	<!-- 住所 -->
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:paddingTop="5.0px">
        <TextView
            android:id="@+id/address"
            android:paddingTop="5.0px"
            android:textColor="#F7F7F7"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5.0px">
		<EditText
			android:id="@+id/addressText"
			android:paddingTop="5.0px"
            android:textColor="#000000"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:layout_height="wrap_content"
            android:hint="@string/input_address" />
	</TableRow>

    <!-- ボタン -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10.0px">
        <Button
            android:id="@+id/mapButton"
            android:paddingTop="5.0px"
            android:paddingBottom="5.0px"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_tick"
            android:text="@string/button_label5"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />
    </TableRow>

</TableLayout>