<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    android:background="@drawable/background2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/title_color">
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="29dip"
            android:layout_height="29dip"
            android:paddingLeft="5dip"
            android:paddingTop="1dip"
            android:paddingBottom="1dip"
            android:layout_gravity="left"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textColor="#FFEA00"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="7dip"
            android:paddingBottom="5dip"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="目的地の設定方法選択"
            android:textSize="10sp"
            android:textColor="#F7F7F7"/>

    </LinearLayout>

    <!-- 住所 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip">
        <TextView
            android:id="@+id/explanation"
            android:paddingTop="10dip"
            android:textColor="#F7F7F7"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip">
        <Button
            android:id="@+id/inputButton"
            android:paddingTop="10dip"
            android:paddingBottom="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_edit"
            android:text="@string/button_label2"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip">
        <Button
            android:id="@+id/mapButton"
            android:paddingTop="10dip"
            android:paddingBottom="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_mapmode"
            android:text="@string/button_label3"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip">
        <Button
            android:id="@+id/voiceButton"
            android:paddingTop="10dip"
            android:paddingBottom="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_btn_speak_now"
            android:text="@string/button_label4"
            android:textColor="@color/white"
            android:background="@drawable/my_button" />
    </TableRow>

    <!-- AdMob -->
    <!--
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="30dip"
        android:orientation="horizontal"
        android:gravity="bottom">

        <com.google.ads.AdView android:id="@+id/ad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="a14f9a05c327aaf"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="true" />

    </LinearLayout>
    -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:paddingTop="30dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.gms.ads.AdView android:id="@+id/ad"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="a14f9a05c327aaf"
            ads:adSize="BANNER"/>
    </LinearLayout>
    
</TableLayout>